--- a/app/src/main/res/layout/fragment_movie_overview.xml
+++ b/app/src/main/res/layout/fragment_movie_overview.xml
@@ -20,9 +20,11 @@
             android:id="@+id/swipeLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="@dimen/margin_16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tmdbLogo"
             tools:context=".ui.fragments.MovieOverviewFragment">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -62,14 +64,36 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height"
             android:layout_marginStart="@dimen/margin_start_end"
             android:layout_marginEnd="@dimen/margin_start_end"
+            android:background="@color/colorBlack"
+            app:layout_constraintBottom_toTopOf="@+id/tmdbLogo"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/tmdbLogo"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_height"
+            android:contentDescription="@string/image_description_poster"
+            android:src="@drawable/tmdb_logo"
+            app:layout_constraintBottom_toTopOf="@+id/tmdbNotice"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/tmdbNotice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/padding_start_end"
+            android:paddingEnd="@dimen/padding_start_end"
+            android:paddingBottom="@dimen/padding"
             android:text="@string/tmdb_notice"
             android:textAlignment="center"
+            android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
