--- a/app/src/main/res/layout/fragment_movie_overview.xml
+++ b/app/src/main/res/layout/fragment_movie_overview.xml
@@ -48,7 +48,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/swipeLayout"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="ERROR 404" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
