--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -3,123 +3,134 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/padding"
-            android:paddingBottom="@dimen/padding"
-            android:scrollbars="vertical"
-            tools:context=".ui.fragments.MovieDetailsFragment">
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/moviePosterDetail"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/image_height_detail"
-                android:layout_marginStart="@dimen/margin_start_end"
-                android:layout_marginEnd="@dimen/margin_start_end"
-                android:contentDescription="@string/image_description_poster"
-                android:scaleType="fitCenter"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <TextView
-                android:id="@+id/movieTitleDetail"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_top"
-                android:paddingStart="@dimen/padding_start_end"
-                android:paddingEnd="@dimen/padding_start_end"
-                android:text=""
-                android:textAlignment="center"
-                android:textSize="@dimen/header"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/moviePosterDetail"
-                tools:text="The Dark Knight (1920)" />
-
-            <TextView
-                android:id="@+id/voteAverage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_start_end"
-                android:layout_marginEnd="@dimen/margin_start_end"
-                android:text=""
-                android:textSize="@dimen/subheader"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/movieTitleDetail"
-                tools:text="7.6" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/appCompatImageView"
-                android:layout_width="@dimen/star_sizes"
-                android:layout_height="@dimen/star_sizes"
-                android:contentDescription="@string/image_description_poster"
-                android:src="@drawable/ic_star_bright_24dp"
-                app:layout_constraintEnd_toStartOf="@id/voteAverage"
-                app:layout_constraintTop_toBottomOf="@id/movieTitleDetail"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <TextView
-                android:id="@+id/movieOverview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/padding_start_end"
                 android:paddingTop="@dimen/padding"
-                android:paddingEnd="@dimen/padding_start_end"
                 android:paddingBottom="@dimen/padding"
-                android:text=""
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
-                tools:text="Movie Overview" />
+                android:scrollbars="vertical"
+                tools:context=".ui.fragments.MovieDetailsFragment">
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/divider_height"
-                android:layout_marginTop="@dimen/margin_16dp"
-                android:layout_marginStart="@dimen/margin_start_end"
-                android:layout_marginEnd="@dimen/margin_start_end"
-                android:background="@color/colorBlack"
-                app:layout_constraintTop_toBottomOf="@id/movieOverview"
-                app:layout_constraintBottom_toTopOf="@+id/tmdbLogo"
-                app:layout_constraintStart_toStartOf="parent" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/moviePosterDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/image_height_detail"
+                    android:layout_marginStart="@dimen/margin_start_end"
+                    android:layout_marginEnd="@dimen/margin_start_end"
+                    android:contentDescription="@string/image_description_poster"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/avatars" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/tmdbLogo"
-                android:layout_width="@dimen/logo_width"
-                android:layout_height="@dimen/logo_height"
-                android:contentDescription="@string/image_description_poster"
-                android:src="@drawable/tmdb_logo"
-                app:layout_constraintTop_toBottomOf="@+id/view"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                tools:srcCompat="@tools:sample/avatars" />
+                <TextView
+                    android:id="@+id/movieTitleDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_top"
+                    android:paddingStart="@dimen/padding_start_end"
+                    android:paddingEnd="@dimen/padding_start_end"
+                    android:text=""
+                    android:textAlignment="center"
+                    android:textSize="@dimen/header"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/moviePosterDetail"
+                    tools:text="The Dark Knight (1920)" />
 
-            <TextView
-                android:id="@+id/tmdbNoticeDetail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="@dimen/padding_start_end"
-                android:paddingEnd="@dimen/padding_start_end"
-                android:text="@string/tmdb_notice"
-                android:textAlignment="center"
-                android:textStyle="italic"
-                app:layout_constraintTop_toBottomOf="@id/tmdbLogo"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/voteAverage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_start_end"
+                    android:layout_marginEnd="@dimen/margin_start_end"
+                    android:text=""
+                    android:textSize="@dimen/subheader"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/movieTitleDetail"
+                    tools:text="7.6" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/appCompatImageView"
+                    android:layout_width="@dimen/star_sizes"
+                    android:layout_height="@dimen/star_sizes"
+                    android:contentDescription="@string/image_description_poster"
+                    android:src="@drawable/ic_star_bright_24dp"
+                    app:layout_constraintEnd_toStartOf="@id/voteAverage"
+                    app:layout_constraintTop_toBottomOf="@id/movieTitleDetail"
+                    tools:srcCompat="@tools:sample/avatars" />
 
-    </ScrollView>
+                <TextView
+                    android:id="@+id/movieOverview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/padding_start_end"
+                    android:paddingTop="@dimen/padding"
+                    android:paddingEnd="@dimen/padding_start_end"
+                    android:paddingBottom="@dimen/padding"
+                    android:text=""
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
+                    tools:text="Movie Overview" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height"
+            android:layout_marginStart="@dimen/margin_start_end"
+            android:layout_marginEnd="@dimen/margin_start_end"
+            android:background="@color/colorBlack"
+            app:layout_constraintBottom_toTopOf="@+id/tmdbLogo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/tmdbLogo"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_height"
+            android:contentDescription="@string/image_description_poster"
+            android:src="@drawable/tmdb_logo"
+            app:layout_constraintBottom_toTopOf="@+id/tmdbNoticeDetail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/tmdbNoticeDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/padding_start_end"
+            android:paddingEnd="@dimen/padding_start_end"
+            android:paddingBottom="@dimen/padding"
+            android:text="@string/tmdb_notice"
+            android:textAlignment="center"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="TMDB Notice" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
